[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-anything"
version = "0.1.0"
description = "A universal RAG framework that can process and understand any type of content"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["rag", "llm", "multimodal", "document-processing", "ai"]
authors = [
  { name = "HKUDS", email = "hkuds@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "lightrag-hku>=1.0.0",
  "numpy>=1.24.0",
  "Pillow>=10.0.0",
  "pypdf2>=3.0.0",
  "python-docx>=1.0.0",
  "python-pptx>=0.6.21",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "aiofiles>=23.0.0",
  "httpx>=0.24.0",
  "tiktoken>=0.5.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
]
ocr = [
  "pytesseract>=0.3.10",
  "pdf2image>=1.16.3",
]
audio = [
  "openai-whisper>=20230918",
  "librosa>=0.10.0",
]
video = [
  "opencv-python>=4.8.0",
  "moviepy>=1.0.3",
]
all = [
  "rag-anything[ocr,audio,video]",
]

[project.urls]
Homepage = "https://github.com/HKUDS/RAG-Anything"
Repository = "https://github.com/HKUDS/RAG-Anything"
Issues = "https://github.com/HKUDS/RAG-Anything/issues"
Documentation = "https://github.com/HKUDS/RAG-Anything#readme"

[project.scripts]
rag-anything = "raganything.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["raganything"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Show verbose output but suppress print statements to keep output clean
addopts = "-v"

[tool.coverage.run]
source = ["raganything"]
omit = ["tests/*", "examples/*"]
